--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -43,7 +43,6 @@
   gap: 20px;
 }
 
-/* Text section */
 .welcome-text {
   font-size: 30px;
   font-family: cursive;
@@ -57,7 +56,6 @@
   text-align: left;
 }
 
-/* Image container */
 .image-container {
   background-color: whitesmoke;
   width: 90%;
@@ -90,7 +88,6 @@
   text-align: center;
 }
 
-/* Heading */
 .set-title {
   color: rgb(10, 133, 241);
   font-family: fantasy;
@@ -101,14 +98,13 @@
   color: whitesmoke;
 }
 
-/* Content */
+
 .set-content {
   max-width: 50%;
   font-family: cursive;
   font-size: 20px;
 }
 
-/* Image */
 .set-image {
   height: 175px;
   border-radius: 50px;
@@ -120,20 +116,19 @@
   border-radius: 30px;
   padding: 60px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   gap: 10px;
   color: white;
 }
 
-/* Footer Sections */
 .footer-section {
   flex: 1;
   min-width: 250px;
   text-align: center;
 }
 
-/* Logo Container */
 .logo-container {
   display: flex;
   align-items: center;
@@ -152,13 +147,11 @@
   font-weight: bold;
 }
 
-/* Headings */
 .footer-heading {
   font-size: 30px;
   margin-top: 20px;
 }
 
-/* Links */
 .footer-link {
   color: lightgray;
   text-decoration: underline;
@@ -166,13 +159,11 @@
   margin: 5px 0;
 }
 
-/* Buttons */
 .footer-button {
   color: whitesmoke;
   border-color: whitesmoke;
 }
 
-/* Input Field */
 .footer-input {
   width: 90%;
   margin-top: 10px;
@@ -185,8 +176,12 @@
 .footer-input label {
   color: whitesmoke;
 }
+.footer-container{
+ padding: 80px;
+ margin-top: -20px;
+}
 
-/* Social Media */
+
 .social-icons {
   display: flex;
   flex-direction: column;
