--- a/src/components/contact/style.css
+++ b/src/components/contact/style.css
@@ -1,7 +1,54 @@
-@media (max-width:600px){
-    .contactbox{
-        margin-left: 40px;
+/* Default styles (for desktops) */
+
+/* For tablets (width <= 1024px) */
+@media (max-width: 1024px) {
+    .contactbox {
+        margin-left:-30px;
+    }
+    .contact-heading{
+        font-size: 18px;
         
     }
- }
- 
+
+    img {
+        width: 90%; 
+        margin: 0 auto;
+        display: block;
+    }
+}
+
+/* For mobile devices (width <= 600px) */
+@media (max-width: 600px) {
+    .contactbox {
+        /* margin-right:100px; */
+        width: 110%;
+        padding: 5px;
+    }
+
+    img {
+        width: 100%;
+        max-width: 300px;
+        margin: 0 auto;
+    }
+
+    .MuiTypography-h4 {
+        font-size: 22px !important; 
+    }
+
+    .MuiTypography-body1 {
+        font-size: 14px !important; 
+        margin-left: 100px;
+        
+    }
+
+    .MuiTextField-root {
+        font-size: 14px !important; 
+    }
+    
+    .MuiButton-root {
+        font-size: 14px !important; 
+        margin-left: -20px;
+        padding: 10px !important;
+    }
+    
+}
