--- a/src/components/medication/style.css
+++ b/src/components/medication/style.css
@@ -3,3 +3,13 @@
     padding: 30px;
    }
 }
+
+.container{ 
+  box-shadow: 0 -15px 28px rgba(0, 0, 0, 0.3);
+  border-radius: 8px; 
+  padding: 20px; 
+  margin-bottom: 16px; 
+  background-color: rgb(32, 31, 31); 
+  
+}
+
